--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <p class="name" style="text-align: center;">
                   Taejune Kim
                 </p>
-                <p>M.S. Student<br>Department of Computer Science and Engineering<br>Sungkyunkwan University</p>
+		<p>Robotics Lab, Hyundai Motor Company</p>
+                <p>I completed BSc and MSc in Computer Science and Engineering</p>
                 <p style="text-align:center">
-                  <a href="mailto:taemo@g.skku.edu">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:taemo@hyundai.com">Email</a> &nbsp;/&nbsp;
 <!--                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
 <!--                   <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
 <!--                   <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp; -->
