--- a/grad/index.html
+++ b/grad/index.html
@@ -77,15 +77,15 @@
                     <span>arXiv</span>
                   </a>
                 </span>
-                <!-- <span class="link-block">
-                  <a class="external-link button is-normal is-rounded is-dark" title="Coming soon!" disabled>
+                <span class="link-block">
+                  <a href="https://github.com/tae-mo/GRAD" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="fab fa-github"></i>
                     </span>
                     <span>Code</span>
                     </a>
                 </span>
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a class="external-link button is-normal is-rounded is-dark" title="Coming soon!" disabled>
                     <span class="icon">
                         <i class="far fa-images"></i>
