--- a/grad/index.html
+++ b/grad/index.html
@@ -70,7 +70,7 @@
                   </a>
                 </span> -->
                 <span class="link-block">
-                  <a href="http://arxiv.org/abs/2312.05283" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://tae-mo.github.io/grad/" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -157,7 +157,7 @@
 
   <hr/>
 
-  <section class="section" id="BibTeX">
+<!--   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{srinivasan2023nuvo,
@@ -167,7 +167,7 @@
   year      = {2023},
 }</code></pre>
     </div>
-  </section>
+  </section> -->
 
 
   <footer class="footer">
