--- a/grad/index.html
+++ b/grad/index.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-    content="Nuvo: Neural UV Mapping"> 
-  <meta name="keywords" content="NeRF">
+    content="GRAD"> 
+  <meta name="keywords" content="Representation Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Grid-Based Continuous Normal Representation for Anomaly Detection</title>
 
