--- a/grad/index.html
+++ b/grad/index.html
@@ -171,7 +171,7 @@
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
-        <a class="icon-link" href="http://arxiv.org/abs/2312.05283">
+        <a class="icon-link" href="https://arxiv.org/abs/2402.18293">
           <i class="fas fa-file-pdf"></i>
         </a>
         <!-- <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
