--- a/grad/index.html
+++ b/grad/index.html
@@ -70,7 +70,7 @@
                   </a>
                 </span> -->
                 <span class="link-block">
-                  <a href="https://tae-mo.github.io/grad/" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2402.18293" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
