--- a/grad/index.html
+++ b/grad/index.html
@@ -41,7 +41,7 @@
               <span class="author-block">
                 <a href="https://maincold2.github.io">Joo Chan Lee*</a>,</span>
               <span class="author-block">
-                <a href="https://maincold2.github.io">Taejune Kim*</a>,</span>
+                <a href="https://tae-mo.github.io">Taejune Kim*</a>,</span>
               <span class="author-block">
                 <a href="https://silverbottlep.github.io/">Eunbyung Park</a>,</span>
               <span class="author-block">
@@ -85,14 +85,6 @@
                     <span>Code</span>
                     </a>
                 </span>
-                <!-- <span class="link-block">
-                  <a class="external-link button is-normal is-rounded is-dark" title="Coming soon!" disabled>
-                    <span class="icon">
-                        <i class="far fa-images"></i>
-                    </span>
-                    <span>Data</span>
-                    </a>
-                  </span> -->
               </div>
             </div>
           </div>
@@ -106,6 +98,12 @@
       <h2 class="title is-3">Main Idea</h2>
       <img width="100%" src="./static/images/demo.png"></img>
     </div>
+    Recent memory-based approaches operate on a discrete feature space implemented by the nearest neighbor or attention mechanism, suffering from (a) poor generalization or (b) an identity shortcut issue outputting the same as input.
+    We propose a (c) grid-based <b>continous feature space</b>, which can be a effective solution for resolving the issues.
+    <br>
+    When a normal patch is fed, even though there is no exact match in the training patches, a corresponding normal feature can be represented by interpolating near normal features (Well-generalization).
+    As the grid has never been exposed to abnormal features during training, it is unable to represent abnormal features by interpolating nearby normal features.
+    This is the core idea of how we can effectively resolve the identity shortcut issue frequently found in the existing methods that aggregate numerous features based on similarities.
   </section>
 
   <hr/>
@@ -141,6 +139,9 @@
       <h2 class="title is-3">Efficacy of Continuous Space</h2>
       <img width="100%" src="./static/images/grid_feature.png"></img>
     </div>
+    The sampled features (from the local and global grids) with near coordinates share similar characteristics whether the input image is normal or not.
+    Furthermore, the fused normal representations of both normal and abnormal inputs are reconstructed into normal images.
+    This result demonstrates that the continuous feature space efficiently tackles the two major challenges in discrete feature space: weak generalization and IS. 
   </section>
 
   <hr/>
@@ -151,21 +152,22 @@
       <img width="100%" src="./static/images/qual.png"></img>
       <br>
     </div>
+    GRAD achieves the best performance for unified anomaly detection.
   </section>
 
   <hr/>
 
-<!--   <section class="section" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{srinivasan2023nuvo,
-  author    = {Pratul P. Srinivasan and Stephan J. Garbin and Dor Verbin and Jonathan T. Barron and Ben Mildenhall},
-  title     = {Nuvo: Neural UV Mapping for Unruly 3D Representations},
-  journal = {arXiv},
-  year      = {2023},
+      <pre><code>@article{lee2024grad,,
+  author    = {Lee, Joo Chan and Kim, Taejune and Park, Eunbyung and Woo, Simon S. and Ko, Jong Hwan},
+  title     = {Grid-Based Continuous Normal Representation for Anomaly Detection},
+  journal   = {arXiv preprint arXiv:2402.18293},
+  year      = {2024},
 }</code></pre>
     </div>
-  </section> -->
+  </section>
 
 
   <footer class="footer">
@@ -174,9 +176,6 @@
         <a class="icon-link" href="https://arxiv.org/abs/2402.18293">
           <i class="fas fa-file-pdf"></i>
         </a>
-        <!-- <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
-          <i class="fab fa-github"></i>
-        </a> -->
       </div>
       <div class="columns is-centered">
         <div class="column is-8">
