--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			  </td>
 			  <td style="padding:20px;width:75%;vertical-align:middle">
 				  <a href="https://tae-mo.github.io/grad">
-					  <span class="papertitle">Grid-Based Continuous Normal Representation for Anomaly Detection</span>
+					  <span class="papertitle">Continuous Memory Representation for Anomaly Detection</span>
 				  </a>
 				  <br>
 				  <span>Joo Chan Lee*</span>,
