--- a/grad/index.html
+++ b/grad/index.html
@@ -8,7 +8,7 @@
     content="GRAD"> 
   <meta name="keywords" content="Representation Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Grid-Based Continuous Normal Representation for Anomaly Detection</title>
+  <title>Continuous Memory Representation for Anomaly Detection</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
@@ -36,7 +36,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
 
-            <h1 class="title is-1 publication-title">Grid-Based Continuous Normal Representation for Anomaly Detection</h1>
+            <h1 class="title is-1 publication-title">Continuous Memory Representation for Anomaly Detection</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://maincold2.github.io">Joo Chan Lee*</a>,</span>
