--- a/grad/index.html
+++ b/grad/index.html
@@ -157,7 +157,7 @@
   <section class="section">
     <div class="container is-max-desktop">
       <h2 class="title is-3">Detection & Localization Performance</h2>
-      <img width="100%" src="./static/images/qual.png"></img>
+      <img width="100%" src="./static/images/qual_crad.png"></img>
       <br>
     <div class="content has-text-justified">
     <p>
