--- a/grad/index.html
+++ b/grad/index.html
@@ -161,7 +161,7 @@
       <br>
     <div class="content has-text-justified">
     <p>
-    GRAD achieves the best performance for unified anomaly detection.
+    CRAD achieves the best performance for unified anomaly detection.
     </p>
     </div>
   </div>
