--- a/crad/index.html
+++ b/crad/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-    content="GRAD"> 
+    content="CRAD"> 
   <meta name="keywords" content="Representation Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Continuous Memory Representation for Anomaly Detection</title>
