--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				  </div>
 			  </td>
 			  <td style="padding:20px;width:75%;vertical-align:middle">
-				  <a href="https://tae-mo.github.io/grad">
+				  <a href="https://tae-mo.github.io/crad">
 					  <span class="papertitle">Continuous Memory Representation for Anomaly Detection</span>
 				  </a>
 				  <br>
@@ -68,7 +68,7 @@
 				  <br>
 				  <em>under review</em>
 				  <br>
-				  <a href="https://tae-mo.github.io/grad/">project page</a> /
+				  <a href="https://tae-mo.github.io/crad/">project page</a> /
 				  <a href="https://github.com/tae-mo/GRAD">code</a>
 				  <br>
 				  <p>
