--- a/crad/index.html
+++ b/crad/index.html
@@ -172,9 +172,9 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{lee2024grad,,
+      <pre><code>@article{lee2024crad,
   author    = {Lee, Joo Chan and Kim, Taejune and Park, Eunbyung and Woo, Simon S. and Ko, Jong Hwan},
-  title     = {Grid-Based Continuous Normal Representation for Anomaly Detection},
+  title     = {Continuous Memory Representation for Anomaly Detection},
   journal   = {arXiv preprint arXiv:2402.18293},
   year      = {2024},
 }</code></pre>
