--- a/index.html
+++ b/index.html
@@ -52,6 +52,32 @@
 		  <tr bgcolor="#fff2cc">
 			  <td style="padding:20px;width:25%;vertical-align:middle">
 				  <div class="one">
+					  <img src='images/pvq.png' width="160">
+				  </div>
+			  </td>
+			  <td style="padding:20px;width:75%;vertical-align:middle">
+				  <a>
+					  <span class="papertitle">Patch-wise Vector Quantization for Unsupervised Medical Anomaly Detection</span>
+				  </a>
+				  <br>
+				  <strong>Taejune Kim*</strong>,
+				  <span>Yun-Gyoo Lee</span>,
+				  <span>Inho Jeong</span>,
+				  <span>Soo-Youn Ham</span>,
+				  <span>Simon S. Woo</span>
+				  <br>
+				  <em>Pattern Recognition Letters</em>, 2024 (accepted)
+				  <br>
+				  <p>
+					  We propose a patch-wise vector quantization to perform high-accuracy unsupervised anomaly detection in CT images. 
+				  </p>
+				  <br>
+			  </td>
+		  </tr> 
+		  
+		  <tr bgcolor="#fff2cc">
+			  <td style="padding:20px;width:25%;vertical-align:middle">
+				  <div class="one">
 					  <img src='images/grad.png' width="160">
 				  </div>
 			  </td>
