--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 					  <span class="papertitle">Patch-wise Vector Quantization for Unsupervised Medical Anomaly Detection</span>
 				  </a>
 				  <br>
-				  <strong>Taejune Kim*</strong>,
+				  <strong>Taejune Kim</strong>,
 				  <span>Yun-Gyoo Lee</span>,
 				  <span>Inho Jeong</span>,
 				  <span>Soo-Youn Ham</span>,
 				  <span>Simon S. Woo</span>
 				  <br>
-				  <em>Pattern Recognition Letters</em>, 2024 (accepted)
+				  <em>Pattern Recognition Letters</em>, 2024 <strong>(Accepted)</strong>
 				  <br>
 				  <p>
 					  We propose a patch-wise vector quantization to perform high-accuracy unsupervised anomaly detection in CT images. 
