--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				  <span>Simon S. Woo</span>,
 				  <span>Jong Hwan Ko</span>
 				  <br>
-				  <em>under review</em>
+				  <em>ECCV</em>, 2024
 				  <br>
 				  <a href="https://tae-mo.github.io/crad/">project page</a> /
 				  <a href="https://github.com/tae-mo/GRAD">code</a>
