--- a/crad/index.html
+++ b/crad/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="is-size-5 publication-venue">
-
+                  ECCV 2024
             </div>
 
             <div class="column has-text-centered">
