--- a/crad/index.html
+++ b/crad/index.html
@@ -41,7 +41,7 @@
               <span class="author-block">
                 <a href="https://maincold2.github.io">Joo Chan Lee*</a>,</span>
               <span class="author-block">
-                <a href="https://tae-mo.github.io">Taejune Kim*</a>,</span>
+                <a href="https://tae-mo.github.io">Taejune Kim*<sup>2</sup></a>,</span>
               <span class="author-block">
                 <a href="https://silverbottlep.github.io/">Eunbyung Park</a>,</span>
               <span class="author-block">
