--- a/crad/index.html
+++ b/crad/index.html
@@ -39,19 +39,20 @@
             <h1 class="title is-1 publication-title">Continuous Memory Representation for Anomaly Detection</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://maincold2.github.io">Joo Chan Lee*</a>,</span>
+                <a href="https://maincold2.github.io">Joo Chan Lee<sup>1</sup>*</a>,</span>
               <span class="author-block">
-                <a href="https://tae-mo.github.io">Taejune Kim*<sup>2</sup></a>,</span>
+                <a href="https://tae-mo.github.io">Taejune Kim<sup>2</sup>*</a>,</span>
               <span class="author-block">
-                <a href="https://silverbottlep.github.io/">Eunbyung Park</a>,</span>
+                <a href="https://silverbottlep.github.io/">Eunbyung Park<sup>1</sup></a>,</span>
               <span class="author-block">
-                <a href="https://dash-lab.github.io/">Simon S. Woo</a>,</span>
+                <a href="https://dash-lab.github.io/">Simon S. Woo<sup>1</sup></a>,</span>
               <span class="author-block">
-                <a href="https://iris.skku.edu/">Jong Hwan Ko</a></span>
+                <a href="https://iris.skku.edu/">Jong Hwan Ko<sup>1</sup></a></span>
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">Sungkyunkwan University</span>
+              <span class="author-block"><sup>1</sup>Sungkyunkwan University</span>
+              <span class="author-block"><sup>2</sup>Robotics Lab, Hyundai Motor Company</span>
             </div>
 
             <div class="is-size-5 publication-venue">
