--- a/crad/index.html
+++ b/crad/index.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>Sungkyunkwan University</span>
+              <span class="author-block"><sup>1</sup>Sungkyunkwan University</span>,
               <span class="author-block"><sup>2</sup>Robotics Lab, Hyundai Motor Company</span>
             </div>
 
