--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				  </div>
 			  </td>
 			  <td style="padding:20px;width:75%;vertical-align:middle">
-				  <a>
+				  <a href="https://www.sciencedirect.com/science/article/pii/S016786552400196X?dgcid=coauthor">
 					  <span class="papertitle">Patch-wise Vector Quantization for Unsupervised Medical Anomaly Detection</span>
 				  </a>
 				  <br>
