--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </tr>
           </tbody></table>
           
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+         <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
 		  <tr>
 			  <td>
 				  <h2>Miscellanea</h2>
@@ -306,7 +306,7 @@
 				  </p>
 			  </td>
 		  </tr>
-		  </tbody></table>
+		  </tbody></table> -->
 		
 <!--           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <tr>
