--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Taejune Kim
                 </p>
-		<p>Research Engineer @ Robotics Lab, Hyundai Motor Company<br>I completed BSc and MSc in Computer Science and Engineering</p>
+		<p>Research Engineer at Robotics Lab, Hyundai Motor Company<br>I completed BSc and MSc in Computer Science and Engineering</p>
                 <p style="text-align:center">
                   <a href="mailto:taemo@hyundai.com">Email</a> &nbsp;/&nbsp;
 <!--                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
